src/components/Loading/style.css
.LoadingSpinners {
	position: absolute;
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100vh;
	animation: animateBg 10s linear infinite;
	top: 100px;
}

@keyframes animateBg {
	0% {
		filter: hue-rotate(0deg);
	}
	100% {
		filter: hue-rotate(360deg);
	}
}

.LoadingSpinners-loader {
	position: relative;
	width: 120px;
	height: 120px;
}

.LoadingSpinners-span {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	transform: rotate(calc(18deg * var(--i)));
}

.LoadingSpinners-span::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 15px;
	height: 15px;
	background-color: #00ff0a;
	border-radius: 50%;
	box-shadow: 0 0 10px #00ff0a, 0 0 20px #00ff0a, 0 0 40px #00ff0a,
		0 0 60px #00ff0a, 0 0 80px #00ff0a, 0 0 100px #00ff0a;
	animation: animate 2s linear infinite;
	animation-delay: calc(0.1s * var(--i));
}

@keyframes animate {
	0% {
		transform: scale(0);
	}
	50% {
		transform: scale(1);
	}
	100% {
		transform: scale(0);
	}
}

